openfuyao-projects/openfuyao-classification/01-installation-and-deployment/code/cluster-api-provider-bke/config/webhook/service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: cluster-api-provider-bke
    app.kubernetes.io/part-of: cluster-api-provider-bke
    app.kubernetes.io/managed-by: kustomize
  name: webhook-service
  namespace: system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: controller-manager
