openfuyao-projects/openfuyao-classification/01-installation-and-deployment/code/cluster-api-provider-bke/config/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-bke-bocloud-com-v1beta1-bkecluster
  failurePolicy: Fail
  name: mbkecluster.kb.io
  rules:
  - apiGroups:
    - bke.bocloud.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bkeclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-bke-bocloud-com-v1beta1-bkenode
  failurePolicy: Fail
  name: mbkenode.kb.io
  rules:
  - apiGroups:
    - bke.bocloud.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bkenodes
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-bke-bocloud-com-v1beta1-bkecluster
  failurePolicy: Fail
  name: vbkecluster.kb.io
  rules:
  - apiGroups:
    - bke.bocloud.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bkeclusters
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-bke-bocloud-com-v1beta1-bkenode
  failurePolicy: Fail
  name: vbkenode.kb.io
  rules:
  - apiGroups:
    - bke.bocloud.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - bkenodes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-config-openfuyao-com-v1alpha1-upgradepath
  failurePolicy: Fail
  name: vupgradepath.kb.io
  rules:
  - apiGroups:
    - config.openfuyao.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - upgradepaths
  sideEffects: None
